changed svg icons to fontawesome icons, fixed formatting and spacing issues within the index file.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -86,8 +86,9 @@ html {
 
 .infoCard {
   display: flex;
-  margin-top: auto;
   background-color: #f4f4f4;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 
 .infoCard img {
@@ -98,12 +99,17 @@ html {
 
 .cardText {
   text-align: center;
-  padding: 10%;
+  padding: 5%;
   max-width: 50%;
 }
 .cardText h2 {
   color: #ef5d5d;
 }
+#indexIcons {
+  margin-bottom: 25px;
+}
+
+
 i {
   color: #ef5d5d;
   justify-content: center;
@@ -121,11 +127,14 @@ p {
 .carouselslide {
   display: none;
   text-align: center;
+  margin-left: 25%;
 }
 
+
 #carouselWrapper {
-  margin-top: 10%;
+  margin-top: 25px;
   text-align: center;
+  margin-bottom: 25px;
 }
 
 .btnSlide {
@@ -138,6 +147,12 @@ p {
 
 .card {
   text-align: center;
+}
+
+#indexForm {
+  width: 100%;
+  margin-left: 50%; 
+  padding: 25px;
 }
 
 .pageWrapper {
